# Head-First-Design-Pattern-C-Plus-Plus

./: CMakeLists.txt  README.md  main.cpp
Chapter_1_Intro_To_Design_Patterns/: Duck.cpp  Duck.h  FlyBehavior.h  QuackBehavior.h
Chapter_2_The_Observer_Pattern/: CustomDisplay.cpp  CustomDisplay.h  DisplayElement.h  Observer.h  Subject.h  WeatherData.cpp  WeatherData.h
Chapter_3_Decorator_Pattern/: Beverage.h  CondimentDecorator.h  DarkRoast.h  Decaf.h  Espresso.h  HouseBlend.h  Milk.h  Mocha.h  Soy.h  Whip.h
Chapter_4_The_Factory_Pattern/Final_Implementation/Private/Pizza/: Pizza.cpp
Chapter_4_The_Factory_Pattern/Final_Implementation/Private/Stores/: PizzaStore.cpp
Chapter_4_The_Factory_Pattern/Final_Implementation/Public/IngredientRegions/: PizzaIngredientFactory.h
Chapter_4_The_Factory_Pattern/Middle_Implementation/Pizzas/: Pizza.cpp
Chapter_4_The_Factory_Pattern/Middle_Implementation/Store/: NYPizzaStore.h
Chapter_4_The_Factory_Pattern/Pizzas/: Pizza.cpp  Pizza.h
Chapter_4_The_Factory_Pattern/Store/: ChicagoPizzaStore.cpp  ChicagoPizzaStore.h  NYPizzaStore.cpp  PizzaStore.cpp  PizzaStore.h
Chapter_5_The_Singleton_Pattern/: ChocolateBoiler_Implementation_1.h  ChocolateBoiler_Implementation_2.h  ChocolateBoiler_Implementation_3.h  ChocolateBoiler_Implementation_4.h
Chapter_6_The_Command_Pattern/: ApplianceItems.cpp  ApplianceItems.h  Appliances.cpp  Appliances.h  AppliancesCommands.h  CommandInterface.h  Item.h  RemoteControl.h  SimpleRemoteControl.h
Chapter_7_The_Adapter_And_Facade_Pattern/: Interfaces.h  Users.h
(+8 files in other folders)
